Add quality control, trigger builds with semantic versioning